--- a/v25.html
+++ b/v25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V18 DIAMOND | CÁSSIA PROMPT</title>
+    <title>V19 FRAMEWORK | CÁSSIA PROMPT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
         :root { --bg: #050505; --card: rgba(12, 12, 12, 0.98); --text: #ffffff; --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%); --border: rgba(191, 149, 63, 0.3); }
@@ -30,43 +30,43 @@
 <body>
 <div class="top-controls"><button class="ctrl-btn" onclick="document.body.classList.toggle('focus-mode')">FOCO</button><button class="ctrl-btn" onclick="document.body.classList.toggle('light-mode')">TEMA</button></div>
 <div id="app-content">
-    <div class="logo-v9">V18 DIAMOND EDITION</div>
+    <div class="logo-v9">V19 GLOBAL FRAMEWORK</div>
     <main class="glass-panel">
         <div class="progress-group" id="prog-area">
-            <span class="label-rigor">Dinamização de Nexo Causal: <span id="val1">0%</span></span>
+            <span class="label-rigor">Abstração de Variáveis (Framework): <span id="val1">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar1"></div></div>
-            <span class="label-rigor">Saturação de Dados Técnicos: <span id="val2">0%</span></span>
+            <span class="label-rigor">Mapeamento B2B Internacional: <span id="val2">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar2"></div></div>
         </div>
-        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF (DADOS TÉCNICOS)</span>
+        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 IMPORTAR PDF (PROVAS/DOCUMENTOS)</span>
         <input type="file" id="pdf-up" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
         
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">FORO E JURISDIÇÃO</span><input type="text" id="jurisdicao" placeholder="Ex: Justiça Federal (BR) e USPTO (EUA)"></div>
-            <div><span class="label-sugestao">CONTEXTO DO NEXO CAUSAL</span><input type="text" id="nexo" placeholder="Ex: Ex-CTO com NDA assinado há 6 meses"></div>
+            <div><span class="label-sugestao">FORO E SISTEMA JURÍDICO</span><input type="text" id="jurisdicao" placeholder="Ex: Civil Law (BR) / Common Law (US)"></div>
+            <div><span class="label-sugestao">METODOLOGIA DE ANÁLISE</span><input type="text" id="metodo" placeholder="Ex: Protocolo Diamond / Trade Secret Audit"></div>
         </div>
 
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">REIVINDICAÇÕES (CLAIMS) DO ATIVO</span><input type="text" id="claims" placeholder="Ex: Algoritmo X com compressão de 40% em tempo real"></div>
-            <div><span class="label-sugestao">METAS DE TRADE-OFF</span><input type="text" id="tradeoff" placeholder="Ex: Liminar vs. ROI de Lançamento"></div>
+            <div><span class="label-sugestao">ELEMENTOS TÉCNICOS COMPARATIVOS</span><input type="text" id="claims" placeholder="Insira os Claims ou Ativos Críticos"></div>
+            <div><span class="label-sugestao">OBJETIVOS DE NEGÓCIO (ROI/RISCO)</span><input type="text" id="tradeoff" placeholder="Ex: Litigação agressiva vs. Acordo confidencial"></div>
         </div>
 
-        <span class="label-sugestao">DETALHAMENTO DOS FATOS</span>
-        <textarea id="fatos" rows="6" placeholder="Insira os fatos brutos aqui..."></textarea>
+        <span class="label-sugestao">CORPUS DE DADOS (FATOS BRUTOS)</span>
+        <textarea id="fatos" rows="6" placeholder="Insira o relato completo do incidente..."></textarea>
         
-        <button class="btn-supreme" onclick="executarV18()">EXECUTAR V18 DIAMOND</button>
+        <button class="btn-supreme" onclick="executarV19()">GERAR FRAMEWORK PROFISSIONAL V19</button>
         <div id="res-box" style="display:none; margin-top:25px; flex-direction:column;">
-            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR</button>
+            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR SISTEMA V19</button>
             <textarea id="res" style="height:350px; background:#000; color:#fcf6ba; font-family:monospace; font-size:12px;"></textarea>
         </div>
     </main>
-    <footer>CÁSSIA PROMPT ® | V18 DIAMOND EDITION.</footer>
+    <footer>CÁSSIA PROMPT ® | FRAMEWORK PARA MERCADO INTERNACIONAL.</footer>
 </div>
 
 <script>
     async function lerPDF(i){const f=i.files[0];const r=new FileReader();r.onload=async function(){const ta=new Uint8Array(this.result);const pdf=await pdfjsLib.getDocument(ta).promise;let t="";for(let p=1;p<=pdf.numPages;p++){const pg=await pdf.getPage(p);const c=await pg.getTextContent();t+=c.items.map(s=>s.str).join(" ")+"\n";}document.getElementById('fatos').value=t;};r.readAsArrayBuffer(f);}
-    function copyRes(){const t=document.getElementById('res');t.select();document.execCommand('copy');document.getElementById('btnCopy').innerText="COPIADO!";setTimeout(()=>document.getElementById('btnCopy').innerText="COPIAR",2000);}
-    function executarV18() {
+    function copyRes(){const t=document.getElementById('res');t.select();document.execCommand('copy');document.getElementById('btnCopy').innerText="COPIADO!";setTimeout(()=>document.getElementById('btnCopy').innerText="COPIAR SISTEMA V19",2000);}
+    function executarV19() {
         document.getElementById('prog-area').style.display='block';
         let p1=0, p2=0;
         let itv=setInterval(()=>{
@@ -74,7 +74,7 @@
             if(p1>=100 && p2<100){p2+=20;document.getElementById('bar2').style.width=p2+'%';document.getElementById('val2').innerText=p2+'%';}
             if(p2>=100){
                 clearInterval(itv);
-                const p = `### PROTOCOLO DIAMOND DE AUDITORIA ESTRUTURADA ###\n\n1. JURISDIÇÃO: ${document.getElementById('jurisdicao').value}\n2. NEXO CAUSAL: ${document.getElementById('nexo').value}\n3. CLAIMS TÉCNICOS: ${document.getElementById('claims').value}\n4. TRADE-OFF: ${document.getElementById('tradeoff').value}\n\n[DIRETRIZES DE ALTA DENSIDADE]:\n- Na Seção de Patentes, compare os CLAIMS TÉCNICOS fornecidos com os fatos da infração.\n- Na Análise de Incerteza, explique o IMPACTO JURÍDICO de cada dado ausente.\n- Tom: Híbrido Jurídico-Econômico (Análise Econômica do Direito).\n\n[ESTRUTURA]: Sumário Executivo (150 pal), Comparação Técnica, Matriz PxI (1-5), Recomendação de Trade-off e Tabela de Dados Ausentes.\n\n[ANTI-ALUCINAÇÃO]: Use a tag "REVISÃO HUMANA NECESSÁRIA" para qualquer lacuna. Não preencha o Quadro Comparativo sem dados factuais.\n\n[DADOS]:\n${document.getElementById('fatos').value}`;
+                const p = `### [FRAMEWORK PROPRIETÁRIO DE AUDITORIA ESTRATÉGICA] ###\n\n1. SISTEMA JURÍDICO E JURISDIÇÃO: ${document.getElementById('jurisdicao').value}\n2. METODOLOGIA APLICADA: ${document.getElementById('metodo').value}\n3. ATIVOS TÉCNICOS EM ANÁLISE: ${document.getElementById('claims').value}\n4. DRIVERS DE DECISÃO (TRADE-OFF): ${document.getElementById('tradeoff').value}\n\n[INSTRUÇÃO DE PROCESSAMENTO PARAMÉTRICO]:\n- Atue como um Auditor de Risco Internacional especializado no nexo causal entre infrações técnicas e danos econômicos.\n- Aplique a metodologia solicitada sobre o CORPUS DE DADOS fornecido.\n- Gere o output em camadas: Executiva (Linguagem de ROI/Custo de Oportunidade) e Técnica (Rigor Normativo).\n\n[ESTRUTURA DE ENTREGA]:\n- Sumário Executivo (Estratégico - máx 150 pal.)\n- Análise Técnica de Correlação (Claims vs. Fatos)\n- Matriz de Risco PxI (Escala 1-5)\n- Framework de Trade-off (Análise Econômica do Direito)\n- Seção de "DADOS AUSENTES" (Obrigatório: Identificar lacunas com tag REVISÃO HUMANA NECESSÁRIA).\n\n[CORPUS DE DADOS]:\n${document.getElementById('fatos').value}`;
                 document.getElementById('res').value=p; document.getElementById('res-box').style.display='flex';
             }
         },50);
