--- a/v25.html
+++ b/v25.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>V24 NEURAL JUDGE | CÁSSIA PROMPT</title>
+    <title>V25 FULL PROOF | CÁSSIA PROMPT</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.16.105/pdf.min.js"></script>
     <style>
         :root { --bg: #050505; --card: rgba(12, 12, 12, 0.98); --text: #ffffff; --gold: linear-gradient(135deg, #bf953f 0%, #fcf6ba 45%, #b38728 70%, #fbf5b7 100%); --border: rgba(191, 149, 63, 0.3); }
@@ -30,43 +30,43 @@
 <body>
 <div class="top-controls"><button class="ctrl-btn" onclick="document.body.classList.toggle('focus-mode')">FOCO</button><button class="ctrl-btn" onclick="document.body.classList.toggle('light-mode')">TEMA</button></div>
 <div id="app-content">
-    <div class="logo-v9">V24 NEURAL JUDGE</div>
+    <div class="logo-v9">V25 THE FULL PROOF</div>
     <main class="glass-panel">
         <div class="progress-group" id="prog-area">
-            <span class="label-rigor">Remoção de Viés Cognitivo: <span id="val1">0%</span></span>
+            <span class="label-rigor">Integridade Probatória Total: <span id="val1">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar1"></div></div>
-            <span class="label-rigor">Saturação de Rigor Epistêmico: <span id="val2">0%</span></span>
+            <span class="label-rigor">Calibragem de Perfil Decisório: <span id="val2">0%</span></span>
             <div class="progress-container"><div class="progress-bar" id="bar2"></div></div>
         </div>
-        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 PDF (LEIS E EVIDÊNCIAS)</span>
+        <span style="color:#fcf6ba; font-weight:900; cursor:pointer; font-size:11px;" onclick="document.getElementById('pdf-up').click()">📎 PDF (CONTRATOS E NORMAS)</span>
         <input type="file" id="pdf-up" accept="application/pdf" style="display:none" onchange="lerPDF(this)">
         
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">HIPÓTESE INVESTIGATIVA</span><input type="text" id="agente" placeholder="Ex: Avaliar nexo entre saída e infração"></div>
-            <div><span class="label-sugestao">REFERENCIAL NORMATIVO</span><input type="text" id="normas" placeholder="Ex: PatG § 9, UWG § 4 (Alemanha)"></div>
+            <div><span class="label-sugestao">STATUS DA PATENTE E NDA</span><input type="text" id="status" placeholder="Ex: Patente concedida em 2024 / NDA assinado"></div>
+            <div><span class="label-sugestao">DESTINATÁRIO E PRIORIDADE</span><input type="text" id="target" placeholder="Ex: CEO (Urgente: Decisão em 48h)"></div>
         </div>
 
         <div style="display:grid; grid-template-columns: 1fr 1fr; gap:15px;">
-            <div><span class="label-sugestao">HIERARQUIA DE OUTPUT</span><input type="text" id="hierarquia" placeholder="Ex: Parecer Técnico-Jurídico Imparcial"></div>
-            <div><span class="label-sugestao">MÉTRICA DE CUSTÓDIA</span><input type="text" id="custodia" placeholder="Ex: Auditoria Kroll com Hash MD5"></div>
+            <div><span class="label-sugestao">TESE DE DEFESA (CONTRA-ARGUMENTO)</span><input type="text" id="defesa" placeholder="Ex: Artigo Smith & Jones (2023)"></div>
+            <div><span class="label-sugestao">JURISDIÇÃO E LEGISLAÇÃO</span><input type="text" id="juris" placeholder="Ex: Alemanha (PatG e UWG)"></div>
         </div>
 
-        <span class="label-sugestao">BASE DE DADOS (CLAIMS + FATOS + CRONOGRAMA)</span>
-        <textarea id="fatos" rows="6" placeholder="Insira dados técnicos e linha do tempo..."></textarea>
+        <span class="label-sugestao">CORPUS DE DADOS (CRONOGRAMA + CLAIMS + LOGS)</span>
+        <textarea id="fatos" rows="6" placeholder="Insira todos os fatos, logs e evidências..."></textarea>
         
-        <button class="btn-supreme" onclick="executarV24()">EXECUTAR V24 NEURAL JUDGE</button>
+        <button class="btn-supreme" onclick="executarV25()">EXECUTAR SISTEMA FULL PROOF</button>
         <div id="res-box" style="display:none; margin-top:25px; flex-direction:column;">
-            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR SISTEMA V24</button>
+            <button class="btn-copy" id="btnCopy" onclick="copyRes()">COPIAR SISTEMA V25</button>
             <textarea id="res" style="height:350px; background:#000; color:#fcf6ba; font-family:monospace; font-size:12px;"></textarea>
         </div>
     </main>
-    <footer>CÁSSIA PROMPT V24 | RESPONSABILIDADE DO USUÁRIO.</footer>
+    <footer>CÁSSIA PROMPT V25 | RESPONSABILIDADE DO USUÁRIO.</footer>
 </div>
 
 <script>
     async function lerPDF(i){const f=i.files[0];const r=new FileReader();r.onload=async function(){const ta=new Uint8Array(this.result);const pdf=await pdfjsLib.getDocument(ta).promise;let t="";for(let p=1;p<=pdf.numPages;p++){const pg=await pdf.getPage(p);const c=await pg.getTextContent();t+=c.items.map(s=>s.str).join(" ")+"\n";}document.getElementById('fatos').value=t;};r.readAsArrayBuffer(f);}
     function copyRes(){const t=document.getElementById('res');t.select();document.execCommand('copy');document.getElementById('btnCopy').innerText="COPIADO!";setTimeout(()=>document.getElementById('btnCopy').innerText="COPIAR",2000);}
-    function executarV24() {
+    function executarV25() {
         document.getElementById('prog-area').style.display='block';
         let p1=0, p2=0;
         let itv=setInterval(()=>{
@@ -74,7 +74,7 @@
             if(p1>=100 && p2<100){p2+=20;document.getElementById('bar2').style.width=p2+'%';document.getElementById('val2').innerText=p2+'%';}
             if(p2>=100){
                 clearInterval(itv);
-                const p = `### PROTOCOLO DE ANÁLISE FORENSE V24 ###\n\n1. HIPÓTESE: ${document.getElementById('agente').value}\n2. BASE NORMATIVA: ${document.getElementById('normas').value}\n3. CUSTÓDIA: ${document.getElementById('custodia').value}\n4. PRIORIDADE: ${document.getElementById('hierarquia').value}\n\n[DIRETIVA DE IMPARCIALIDADE]:\n- Atue como perito judicial neutro. Não predetermine culpa.\n- Avalie se as evidências sustentam a hipótese sob o padrão de "Dúvida Razoável".\n- Se os dados forem insuficientes, a conclusão deve ser "Inconclusiva" e detalhada no Checklist de Lacunas.\n\n[OUTPUT ESPERADO]:\n- Sumário Executivo (Probabilidade Jurídica)\n- Quadro de Correlação Probatória (Claims vs. Fatos)\n- Checklist de Prontidão Jurídica (Dúvidas em linguagem simples para o usuário)\n- Tabela de Dados Ausentes (Tag: REVISÃO HUMANA NECESSÁRIA)\n\n[BASE DE DADOS]:\n${document.getElementById('fatos').value}`;
+                const p = `### SISTEMA DE AUDITORIA V25 - FULL PROOF ###\n\n1. STATUS LEGAL: ${document.getElementById('status').value}\n2. DESTINATÁRIO: ${document.getElementById('target').value}\n3. TESE DE DEFESA: ${document.getElementById('defesa').value}\n4. LEGISLAÇÃO: ${document.getElementById('juris').value}\n\n[DIRETIVAS]:\n- Analise se o Status Legal sustenta as reivindicações.\n- Avalie a Tese de Defesa contra as evidências do Corpus.\n- Se houver conflito de provas, apresente os dois cenários e suas consequências.\n- Priorize o output conforme a necessidade do Destinatário.\n\n[OUTPUT ESPERADO]:\n- Recomendação de Ação Imediata (Prioridade Máxima)\n- Sumário Executivo Estratégico\n- Quadro Comparativo (Claim vs. Fato vs. Defesa)\n- Painel de Riscos para Leigos (Explique lacunas de forma simples)\n- Tabela Técnica de Dados Ausentes (Tag: REVISÃO HUMANA NECESSÁRIA)\n\n[CORPUS DE DADOS]:\n${document.getElementById('fatos').value}`;
                 document.getElementById('res').value=p; document.getElementById('res-box').style.display='flex';
             }
         },50);
